Set flex-wrap of .tag-container to wrap to prevent tags container with many tags from overflowing

--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -87,6 +87,7 @@ nav
 .tag-container
     display: flex
     flex-direction: row
+    flex-wrap: wrap
     justify-content: flex-start
     align-items: center
 
